@@ -1,5 +1,6 @@
 Change Log:
 v0.7
+  - the networkDynamic() data conversion function as additional arguments "edge.TEA.names"" and "vertex.TEA.names" and can now load dynamic edge or vertex attributes included as extra columns to edge.spells and vertex.spells.
   - added read.son function for parsing SoNIA-formatted files with dynamic network data
   - added nd_test_nets dataset, a list networkDynamic objects with unusual configurations and parameters to be used for testing
   - fixed bug in spells.overlap and adding missing tests
